--- a/implementation/endomorphism_guide.ipynb
+++ b/implementation/endomorphism_guide.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from libr.endomorphism import Endomorphism\n",
+    "from isogenies.endomorphism import Endomorphism\n",
     "E = EllipticCurve(GF(23),[12,4])"
    ]
   },
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
     }
    ],
    "source": [
-    "from libr.endomorphism_ring import Endomorphism_ring\n",
+    "from isogenies.endomorphism_ring import Endomorphism_ring\n",
     "E = EllipticCurve(GF(23),[12,4])\n",
     "O = Endomorphism_ring(E)\n",
     "print(O)\n",
@@ -207,11 +207,18 @@
     "print(O.field())\n",
     "print(O.order())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 9.0",
+   "display_name": "SageMath 9.2",
    "language": "sage",
    "name": "sagemath"
   },
@@ -225,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
