fix imports to new name

--- a/implementation/horizontal_guide.ipynb
+++ b/implementation/horizontal_guide.ipynb
@@ -33,7 +33,7 @@
     }
    ],
    "source": [
-    "from libr.horizontal_walk import horizontal_walk\n",
+    "from isogenies.horizontal_walk import horizontal_walk\n",
     "p = 3*2*3*5*7*11*13*17*19-1\n",
     "E = EllipticCurve(GF(p),[2558103,24391662])\n",
     "A = [(3, 2, 50),(5, 4, 72),\n",
@@ -86,7 +86,7 @@
     }
    ],
    "source": [
-    "from libr.volcano_schoof import volcano_schoof\n",
+    "from isogenies.volcano_schoof import volcano_schoof\n",
     "E = EllipticCurve(GF(17),[3,16])\n",
     "volcano_schoof(E)"
    ]
@@ -115,7 +115,7 @@
     }
    ],
    "source": [
-    "from libr.volcano_depth import volcano_depth\n",
+    "from isogenies.volcano_depth import volcano_depth\n",
     "E = EllipticCurve(GF(101),[3,16])\n",
     "volcano_depth(E,2)"
    ]
@@ -144,7 +144,7 @@
     }
    ],
    "source": [
-    "from libr.supersingular import is_supersingular\n",
+    "from isogenies.supersingular import is_supersingular\n",
     "E = EllipticCurve(GF(101),[0,1])\n",
     "is_supersingular(E)"
    ]
@@ -152,7 +152,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 9.0",
+   "display_name": "SageMath 9.2",
    "language": "sage",
    "name": "sagemath"
   },
@@ -166,7 +166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
