--- a/implementation/isogeny_quide.ipynb
+++ b/implementation/isogeny_quide.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from libr.isogeny import Isogeny\n",
+    "from isogenies.isogeny import Isogeny\n",
     "E = EllipticCurve(GF(59),[10,36])"
    ]
   },
@@ -344,7 +344,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 9.0",
+   "display_name": "SageMath 9.2",
    "language": "sage",
    "name": "sagemath"
   },
@@ -358,7 +358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
