--- a/implementation/volcano_guide.ipynb
+++ b/implementation/volcano_guide.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from libr.volcano import Volcano\n",
+    "from isogenies.volcano import Volcano\n",
     "E = EllipticCurve(GF(607), [350,514])"
    ]
   },
@@ -302,7 +302,7 @@
     }
    ],
    "source": [
-    "from libr.volcano import Isogeny_graph\n",
+    "from isogenies.volcano import Isogeny_graph\n",
     "E = E = EllipticCurve(GF(17),[3,16])\n",
     "G = Isogeny_graph(E,[3,5])\n",
     "G.plot(vertex_size = (400,400))"
@@ -330,7 +330,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 9.0",
+   "display_name": "SageMath 9.2",
    "language": "sage",
    "name": "sagemath"
   },
@@ -344,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
